misc4.0/etl/etl4/clusters/etl4/overlays/lb-on-secondary-networks/kube-loxilb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-loxilb
  namespace: loxilb
  labels:
    app: loxilb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loxilb
  template:
    metadata:
      labels:
        app: loxilb
    spec:
      hostNetwork: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
        # Mark the pod as a critical add-on for rescheduling.
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          operator: Exists
      priorityClassName: system-node-critical
      serviceAccountName: kube-loxilb
      terminationGracePeriodSeconds: 0
      containers:
      - name: kube-loxilb
        image: ghcr.io/loxilb-io/kube-loxilb:latest
        imagePullPolicy: Always
        command:
        - /bin/kube-loxilb
        args:
        #- --loxiURL=http://172.17.0.2:11111
        - --externalCIDR=192.168.82.100/32
        - --setRoles=0.0.0.0
        #- --monitor
        #- --setBGP
        #- --setLBMode=1
        #- --config=/opt/loxilb/agent/kube-loxilb.conf
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "50Mi"
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN", "NET_RAW"]
