misc4.0/etl/etl4/clusters/etl4/overlays/lb-on-secondary-networks/next-dhcp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-dhcp
  namespace: dhcp
  labels:
    app: next-dhcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-dhcp
  template:
    metadata:
      labels:
        app: next-dhcp
      annotations:
        k8s.v1.cni.cncf.io/networks: |
         [{
            "name": "vlan-1512",
            "namespace": "default",
            "ips": ["10.10.1.4/24"],
            "interface": "eth1"
          }]        
    spec:
      containers:
      - name: next-dhcp
        image: quay.io/raffaelespazzoli/nextdhcp@sha256:70c1e5b241eaffac8f45067ddaad7be393d4aa644a18716e008a70b3a7877cd2
        # command:
        #   - /bin/bash
        #   - -c
        #   - sleep infinity
        args:
        - --conf
        - /etc/nextdhcp/config/Dhcpfile
        volumeMounts:
        - name: config
          mountPath: /etc/nextdhcp/config
        securityContext:
          runAsUser: 0
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
      volumes:
      - name: config
        configMap:
          name: dhcp-config
