misc4.0/etl/etl4/clusters/etl4/overlays/lb-on-secondary-networks/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: vms-web
  namespace: lb-on-secondary-networks
subsets:
  - addresses:
      - ip: 10.10.1.2
      - ip: 10.10.1.3
    ports:
      - name: web
        port: 8080
        protocol: TCP
