misc4.0/etl/etl4/clusters/etl4/overlays/lb-on-secondary-networks/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vms-web
  namespace: lb-on-secondary-networks
  annotations:
    metallb.universe.tf/address-pool: vlan-1512-pool 
spec:
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
