misc4.0/etl/etl4/clusters/etl4/overlays/lb-on-secondary-networks/loxilb.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loxilb-lb
  namespace: loxilb
spec:
  selector:
    matchLabels:
      app: loxilb-app
  template:
    metadata:
      name: loxilb-lb
      labels:
        app: loxilb-app
    spec:
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: Exists
      - key: "node-role.kubernetes.io/control-plane"
        operator: Exists
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: "node-role.kubernetes.io/master"
      #           operator: Exists
      #         - key: "node-role.kubernetes.io/control-plane"
      #           operator: Exists
      # initContainers:
      # - name: mkllb-cgroup
      #   command:
      #     - sh
      #     - -ec
      #     - |
      #       ls /usr/local/sbin/mkllb_cgroup && chmod 777 /usr/local/sbin/mkllb_cgroup;
      #       cp -f /usr/local/sbin/mkllb_cgroup /hbin/mkllb_cgroup;
      #       nsenter --cgroup=/hproc/1/ns/cgroup --mount=/hproc/1/ns/mnt /bin/mkllb_cgroup;
      #       echo done;
      #       rm /hbin/mkllb_cgroup;
      #   image: "ghcr.io/loxilb-io/loxilb:latest"
      #   imagePullPolicy: Always
      #   volumeMounts:
      #     - name: hproc
      #       mountPath: /hproc
      #     - name: hbin
      #       mountPath: /hbin
      #   terminationMessagePolicy: FallbackToLogsOnError
      #   securityContext:
      #     privileged: true
      #     runAsUser: 0
      #     capabilities:
      #       add:
      #         - SYS_ADMIN
      containers:
      - name: loxilb-app
        image: "ghcr.io/loxilb-io/loxilb:latest"
        imagePullPolicy: IfNotPresent
        command: [ "/root/loxilb-io/loxilb/loxilb", "--egr-hooks", "--whitelist=ens1f0" ]
        ports:
        - containerPort: 11111
        - containerPort: 179
        - containerPort: 50051
        volumeMounts:
          - name: llb-cgroup
            mountPath: /opt/loxilb/cgroup
        securityContext:
          privileged: true
          runAsUser: 0
          capabilities:
            add:
              - SYS_ADMIN
      volumes:
      - name: hproc
        hostPath:
          path: /proc
          type: Directory
      - name: hbin
        hostPath:
          path: /bin
          type: Directory
      - name: llb-cgroup
        hostPath:
          path: /opt/loxilb/cgroup
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: loxilb-lb-service
  namespace: loxilb
spec:
  clusterIP: None
  selector:
    app: loxilb-app
  ports:
  - name: loxilb-app
    port: 11111
    targetPort: 11111
    protocol: TCP
  - name: loxilb-app-bgp
    port: 179
    targetPort: 179
    protocol: TCP
  - name: loxilb-app-gobgp
    port: 50051
    targetPort: 50051
    protocol: TCP
